DBC22-3410: Alignment fixed for desktop view

--- a/src/frontend/src/pages/ContainerSidePanel.scss
+++ b/src/frontend/src/pages/ContainerSidePanel.scss
@@ -119,10 +119,11 @@
     flex: 1 1 auto;
 
     .controls-container {
+      justify-content: space-between;
+
       .tools-container {
         display: flex;
         align-items: center;
-        margin-left: auto;
         position: relative;
   
         .btn {
